# Home-Work-Repository

./: README.md
Algo/: CriticalPath.cpp  CycleDetector.cpp  Fibonacci.cpp  GridSolver.cpp  HanoiTower.cpp  LCS.cpp  MatrixChain.cpp  ParathensesValidator.cpp  PolynomSorter.cpp  PostfixEvaluator.cpp  SharedMemoryIPC.c  StackMerging.cpp  TopologicalSort.cpp  hpow.cpp  topological_sort.cpp
Algo/AVL/: AvlTree.cpp  AvlTree.h  AvlTree.tpp
Algo/Heap/: Heap.hpp  Heap.tpp
Algo/Queue/: main.cpp
Algo/RBTree/: RBNode.hpp  RBTree.hpp  RBTree.tpp
Algo/Shared Pointer/: shared_ptr.hpp  shared_ptr.tpp
Algo/Unique Pointer/: Unique Pointer.h  unique_ptr.h  unique_ptr.tpp
Algo/Week1/: Fibonacci.cpp  hpow.cpp
Algo/my_make/: CMakeLists.txt  README.md  make.sh
Algo/my_make/src/: CMakeLists.txt  main.cpp
Algo/my_make/src/app/: main.cpp
Algo/my_make/src/ast/: ast.h
Algo/my_make/src/cli/: cli.cpp  cli.h  main.cpp
Algo/my_make/src/core/: errors.cpp
Algo/my_make/src/engine/: executor.cpp  graph.cpp  rule_database.cpp
Algo/my_make/src/errors/: errors.cpp  errors.h
Algo/my_make/src/eval/: variable_table.cpp
Algo/my_make/src/executor/: executor.cpp  executor.h
Algo/my_make/src/graph/: graph.cpp  graph.h
Algo/my_make/src/lexer/: lexer.cpp  lexer.h  source_location.h
Algo/my_make/src/modules/ast/: ast.h
Algo/my_make/src/modules/cli/: cli.h
Algo/my_make/src/modules/core/errors/: errors.cpp  errors.h
Algo/my_make/src/modules/engine/execution/: executor.cpp  executor.h
Algo/my_make/src/modules/engine/graph/: graph.cpp  graph.h
Algo/my_make/src/modules/engine/rule_database/: rule_database.cpp  rule_database.h
Algo/my_make/src/modules/eval/: expander.cpp  expander.h  variable_table.cpp  variable_table.h
Algo/my_make/src/modules/parser/lexer/: lexer.cpp  lexer.h
Algo/my_make/src/modules/parser/parser/: parser.cpp  parser.h
Algo/my_make/src/parser/: parser.cpp  parser.h
Algo/my_make/src/rules/: rule_database.cpp  rule_database.h
Algo/my_make/src/variables/: variable_table.cpp  variable_table.h
Algo/my_make/tests/: CMakeLists.txt  README.md  test_executor.cpp  test_expander.cpp  test_graph.cpp  test_lexer.cpp  test_parser.cpp  test_variable_table.cpp
C++ Tasks/Allocator/: allocator.cpp  allocator.hpp
C++ Tasks/Async/: async_with_decltype.cpp  async_with_invoke.cpp
C++ Tasks/CW/: CMakeLists.txt  Graph.cpp  Graph.hpp  graph  graph.py  main.cpp
C++ Tasks/Calculator/: CMakeLists.txt  main.cpp
C++ Tasks/Calculator/include/ast/: expression_node.hpp  function_node.hpp  number_node.hpp  operator_node.hpp
C++ Tasks/Calculator/include/calculator/: calculator.hpp  calculator_error.hpp
C++ Tasks/Calculator/include/lexer/: lexer.hpp  token.hpp
C++ Tasks/Calculator/include/parser/: parser.hpp
C++ Tasks/Calculator/src/ast/: expression_node.cpp  function_node.cpp  number_node.cpp  operator_node.cpp
C++ Tasks/Calculator/src/calculator/: calculator.cpp  calculator_error.cpp
C++ Tasks/Calculator/src/lexer/: lexer.cpp  token.cpp
C++ Tasks/Calculator/src/parser/: parser.cpp
C++ Tasks/File System/: CMakeLists.txt  MakeFile  main.cpp
C++ Tasks/File System/include/: FileSystem.h
C++ Tasks/File System/src/: FileSystem.cpp  FileSystem.h  main.cpp
C++ Tasks/Grep/: CMakeLists.txt  (+1 more)
C++ Tasks/Regex/: CMakeLists.txt  conversion_builder.cpp  engine_nfa.cpp  engine_nfa.hpp  grammar.cpp  grammar.hpp  main.cpp  match.cpp  match.hpp  matchers.cpp  matchers.hpp  nfa_regex.cpp  nfa_regex.hpp
C++ Tasks/Regex/include/ast/: ast.hpp
C++ Tasks/Regex/include/builder/: conversion_builder.hpp
C++ Tasks/Regex/include/engine/: engine_dfa.hpp  engine_nfa.hpp
C++ Tasks/Regex/include/grammar/: grammar.hpp
C++ Tasks/Regex/include/match/: match.hpp  matchers.hpp
C++ Tasks/Regex/include/nfa/: engine_nfa.hpp
C++ Tasks/Regex/include/regex/: conversion_builder.hpp  regex.hpp  regex_error.hpp
C++ Tasks/Regex/src/ast/: ast.cpp
C++ Tasks/Regex/src/builder/: conversion_builder.cpp
C++ Tasks/Regex/src/engine/: engine_dfa.cpp  engine_nfa.cpp
C++ Tasks/Regex/src/grammar/: grammar.cpp
C++ Tasks/Regex/src/match/: match.cpp  matchers.cpp
C++ Tasks/Regex/src/matchers/: match.cpp  matchers.cpp
C++ Tasks/Regex/src/nfa/: engine_nfa.cpp  nfa_regex.cpp
C++ Tasks/Regex/src/regex/: conversion_builder.cpp  regex.cpp  regex_error.cpp
(+818 files in other folders)
